libide: Don't swap parameters on callbacks for PeasExtensionSet signals

Doing otherwise will result on a "IDE_IS_CONTEXT (self)" assertion failing
in those callbacks, as they will be checking the wrong parameter.

https://bugzilla.gnome.org/show_bug.cgi?id=761063